--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
   background-color: white;
 }
@@ -15,6 +16,7 @@
 }
 
 .App-header {
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   background-color: white;
   min-height: 10vh;
   display: flex;
@@ -60,4 +62,54 @@
   border: 2px solid #007bff; 
   padding: 0px; 
   margin-bottom: 20px; 
+}
+
+.card-container {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+.card-content {
+  padding: 20px;
+  background-color: #333;
+  border-radius: 10px;
+}
+
+.card-name {
+  font-size: 18px;
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+.card-description {
+  font-size: 16px;
+  color: #fff;
+}
+
+/* .card-container {
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+}
+
+.card-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+}
+
+.card-details {
+  text-align: center;
+}
+
+.card-details p {
+  margin: 5px 0;
+} */
+
+/* New styles for images */
+.image {
+  width: 100%; /* Adjust width as needed, possibly to a fixed px value for more control */
+  height: auto; /* Keeps aspect ratio intact */
+  border-radius: 10px; /* Gives a rounded appearance to the image */
 }
