--- a/client/src/App.css
+++ b/client/src/App.css
@@ -56,6 +56,7 @@
 
 .button {
   margin: 5 5px; 
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .rating-descriptions {
